feat: Upgrade OS Java Client to v3.4.0 (zeebe/operate/tasklist)
Bump the OpenSearch version to the latest v3.4.0 and fix any API
errors.

Relates to #40597